Link to published demo in the bower config

--- a/bower.json
+++ b/bower.json
@@ -2,8 +2,8 @@
     "name": "Algorithm",
     "version": "0.0.1",
     "description": "Algorihtm visualization component",
-    "homepage": "www.homegape.com/blog",
-    "authors": [ "Serge T <@hotmail.com>" ],
+    "homepage": "http://tsv2013.github.io/algorithm",
+    "authors": [ "Serge T <@domain.com>" ],
     "private": true,
     "license": "MIT",
     "dependencies": {
