--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "grunt-contrib-copy": "^0.8.0",
         "grunt-contrib-cssmin": "^0.12.2",
         "grunt-contrib-concat": "^0.5.1",
-        "grunt-bower-task": "~0.4.0"
+        "grunt-bower-task": "~0.4.0",
+        "grunt-contrib-qunit": "^0.7.0"
     }
 }
