--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,8 @@ before_script:
   - npm install -g bower
   - npm install -g typescript
   - npm install -g tsd
+  - tsd install knockout
+  - tsd install jquery
+  - tsd install qunit
  
 script: grunt test
