--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "grunt-contrib-cssmin": "^0.12.2",
         "grunt-contrib-concat": "^0.5.1",
         "grunt-bower-task": "~0.4.0",
-        "grunt-contrib-qunit": "^0.7.0"
+        "grunt-contrib-qunit": "^0.7.0",
+        "grunt-qunit-junit": "^0.3.1"
     }
 }
