--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "Algorithm",
     "version": "0.0.1",
     "license": "MIT",
-    "private": true,
+    "private": false,
     "dependencies": {
     },
     "devDependencies": {
