--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.2.1",
     "license": "MIT",
     "private": false,
-    "repository": { "url": "https://github.com/tsv2013/algorithm.git" },
+    "repository": { "type": "git", "url": "https://github.com/tsv2013/algorithm.git" },
     "dependencies": {
     },
     "devDependencies": {
