--- a/package.json
+++ b/package.json
@@ -1,11 +1,6 @@
 ﻿{
-    "name": "Algorithm",
-    "version": "0.2.1",
-    "license": "MIT",
-    "private": false,
-    "repository": { "type": "git", "url": "https://github.com/tsv2013/algorithm.git" },
-    "dependencies": {
-    },
+    "name": "algorithm-dev-dependencies",
+    "version": "0.0.0",
     "devDependencies": {
         "grunt": "^0.4.5",
         "grunt-typescript": "0.6.1",
