--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
-    "name": "Algorithm",
-    "version": "0.0.1",
+    "name": "tw-widget-algorithm",
+    "version": "0.2.1",
     "description": "Algorihtm visualization component",
     "homepage": "http://tsv2013.github.io/algorithm",
     "authors": [ "Serge T <@domain.com>" ],
     "private": false,
     "license": "MIT",
+    "repository": { "type": "git", "url": "https://github.com/tsv2013/algorithm.git" },
     "dependencies": {
         "jquery": "latest",
         "knockout": "latest"
