--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ before_script:
   - npm install -g grunt-cli
   - npm install -g bower
   - npm install -g typescript
+  - npm install -g tsd
+  - tsd install knockout
+  - tsd install jquery
+  - tsd install qunit
   - bower install
  
 script: grunt test
