--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,9 @@
         "dist/algorithm.min.css"
     ],
     "moduleType": "none",
-    "ignore": [], 
+    "ignore": [
+        ".coveralls.yml"
+    ], 
     "repository": {
         "type": "git",
         "url": "https://github.com/tsv2013/algorithm.git"
