--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
-    "name": "tw-widget-algorithm",
-    "version": "v0.2.4",
+    "name": "tsv-widget-algorithm",
+    "version": "v0.2.5",
     "description": "Algorihtm visualization component",
     "homepage": "http://tsv2013.github.io/algorithm",
     "authors": [ "Serge T <@domain.com>" ],
