Ignore nuget packages.config

--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "moduleType": "none",
     "ignore": [
         ".coveralls.yml",
-        "algorithm.csproj"
+        "algorithm.csproj",
+        "packages.config"
     ], 
     "repository": {
         "type": "git",
