--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,7 @@ before_script:
   - npm install -g bower
   - npm install -g typescript
   - npm install -g tsd
-  - tsd install knockout
-  - tsd install jquery
-  - tsd install qunit
+  - tsd install
   - bower install
  
 script:
