--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.0.0",
     "devDependencies": {
         "grunt": "^0.4.5",
-        "grunt-typescript": "0.6.1",
+        "grunt-typescript": "latest",
         "grunt-open": "^0.2.3",
         "grunt-contrib-watch": "^0.6.1",
         "grunt-contrib-less": "^1.0.0",
