--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ install:
   
 # Post-install test scripts.
 test_script:
-  # Output useful info for debugging.
+  # Output useful info for debugging
   - node --version
   - npm --version
   # run tests
