--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,4 +1,4 @@
-# Install scripts. (runs after repo cloning)
+# Install scripts (runs after repo cloning)
 install:
   # Get the latest stable version of Node.js or io.js
   - ps: Install-Product node $env:nodejs_version
