--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ install:
   - tsd install
   - bower install
   
-# Post-install test scripts.
+# Post-install test scripts
 test_script:
   # Output useful info for debugging
   - node --version
