--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.vscode
 obj/**
 bin/**
 _build/**
@@ -11,6 +12,4 @@ typings/**
 lib/**
 **/*.map
 *.log
-widget/*.js
-widget/*.css
-tests/*.js
+tmp
