--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "ts-loader": "latest",
     "typescript": "latest",
     "underscore": "^1.8.3",
-    "webpack": "^2.2.1"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.4.1"
   }
 }
